# dockStrat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
dockstrat/: __init__.py  engine.py
dockstrat/data/: chai_output_extraction.py  dynamicbind_input_preparation.py
dockstrat/models/: _surfdock_surface_helper.py  alphafold3_inference.py  boltz_inference.py  chai_inference.py  dynamicbind_inference.py  gnina_inference.py  protenix_inference.py  surfdock_inference.py  unidock2_inference.py  vina_inference.py
dockstrat/utils/: data_utils.py  log.py  sequence.py  utils.py
dockstrat_config/data/: chai_input_preparation.yaml  chai_output_extraction.yaml  gnina_input_preparation.yaml  icm_identify_pocket.yaml  icm_input_preprocessing.yaml
dockstrat_config/model/: alphafold3_inference.yaml  boltz1_inference.yaml  boltz2_inference.yaml  chai_inference.yaml  dynamicbind_inference.yaml  gnina_inference.yaml  icm_inference.yaml  protenix_inference.yaml  surfdock_inference.yaml  unidock2_inference.yaml  (+1 more)
envs/: alphafold3  protenix
scripts/: _pose_comparison.pml  generate_pose_comparison_figure.py  install_alphafold3_env.sh  install_boltz_env.sh  install_chai_env.sh  install_dynamicbind_env.sh  install_gnina_env.sh  install_protenix_env.sh  install_surfdock_env.sh  install_unidock2_env.sh  install_vina_env.sh  prepare_zenodo_cofolding.sh  zenodo_README.md
tests/: test_alphafold3_inference.py  test_boltz_inference.py  test_chai_inference.py  test_engine_smoke.py  test_plinder_analysis.py  test_protenix_inference.py  test_sequence_utils.py
(+53 files in other folders)
