[project]
name = "dockstrat"
version = "0.1.0"
description = "Protein-ligand docking benchmark for crystal (holo) structures"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "protein-ligand docking",
    "benchmarking",
    "molecular docking",
    "crystal structures",
]

dependencies = [
    "omegaconf",
    "rootutils",
    "rdkit>=2023.3.2",
    "biopandas",
    "biopython",
    "pandas>=1.3.5",
    "numpy",
    "tqdm",
    "loguru",
    "pyyaml",
    "MDAnalysis",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dockstrat", "dockstrat_config"]
include = [".project-root", "dockstrat_config/**/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--color=yes", "--durations=0", "--strict-markers"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = "True"
markers = ["slow: slow tests"]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
